fixed text overflow in columns on mobile and added media query for iphone

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+a {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+}
+
 #footer {
     text-align: center;
 }
@@ -11,5 +16,16 @@ h1 {
 }
 
 .jumbotron {
-    padding: 50px;
+    padding: 30px;
 }
+
+@media only screen and (max-width: 320px) {
+  a {
+    font-size: 10px;
+  }
+    
+  .jumbotron {
+    padding: 0px;
+  }
+}
+
